--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "axios": "^1.7.9",
     "pinia": "^2.3.0",
     "vue": "^3.5.13"
