--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
     "pinia": "^2.3.0",
+    "primevue": "^4.2.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
