--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "pinia": "^2.3.0",
     "primevue": "^4.2.5",
     "vue": "^3.5.13"
